2008-01-06  Tim-Philipp Müller  <tim at centricular dot net>

	* doc/tmpl/conn.sgml:
	  Clarify docs a bit.

2008-01-05  Tim-Philipp Müller  <tim at centricular dot net>

	* tests/check/gnet/gnetconnhttp.c: (test_conn_http_post_local):
	  Disable SOCKS use for test that connects to server on
	  localhost.

2008-01-05  Tim-Philipp Müller  <tim at centricular dot net>

	* configure.ac:
	  Require check 0.9.4 or later.

	* tests/check/gnetcheck.h: (__gnet_tcase_add_test), (_tcase_add_test):
	  Fix up things so that in case of failure the test that failed
	  is shown properly (before the variable name 'tf' would get
	  stringified instead of the test function name).

2008-01-05  Tim-Philipp Müller  <tim at centricular dot net>

	* tests/check/gnetcheck.c: (gnet_check_init):
	  Call gnet_socks_set_enabled() if the SOCKS_SERVER environment
	  variable is set, so we can run the unit tests through the
	  SOCKS implementation too (e.g. in connection with ssh -D).

2007-12-18  Tim-Philipp Müller  <tim at centricular dot net>

	* src/uri.c: (gnet_uri_parse), (parse_inplace_munge_string_part),
	  (gnet_uri_parse_inplace):
	* src/uri.h:
	  API: add gnet_uri_parse_inplace()

	* tests/check/gnet/gneturi.c:
	* doc/gnet-sections.txt:
	* doc/tmpl/uri.sgml:
	  Add unit test and docs for the above.

2007-12-18  Tim-Philipp Müller  <tim at centricular dot net>

	* src/tcp.c: (gnet_tcp_socket_get_remote_inetaddr):
	* src/udp.c: (gnet_udp_socket_unref):
	  Two small doc additions.

	* doc/tmpl/conn-http.sgml:
	* doc/tmpl/conn.sgml:
	* doc/tmpl/inetaddr.sgml:
	* doc/tmpl/tcp.sgml:
	  Update templates to trunk.

2007-12-14  Tim-Philipp Müller  <tim at centricular dot net>

	Patch by: Jeff Garzik <jeff at garzik org>.

	* src/uri.c: (field_unescape):
	  Micro-optimisation: avoid unnecessary read/writes.

2007-12-09  Tim-Philipp Müller  <tim at centricular dot net>

	* src/uri.c: (neednt_escape_table), (StringPart), (DUP_STRING_PART),
	  (ISSPACE), (gnet_uri_parse), (gnet_uri_new):